# PokerApp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
Back/: Dockerfile  main.py  poker.py  pyproject.toml  repository.py
Front/: Dockerfile  package.json
Front/src/app/: page.tsx
Front/src/components/poker/: actionBar.tsx  gameControls.tsx  logs.tsx
Front/src/components/ui/: button.tsx
Front/src/hooks/: handLog.ts  poker.ts
tests/: end_to_end_test.py
